--- a/hw_all_sql.html
+++ b/hw_all_sql.html
@@ -64,6 +64,7 @@ body {font-family: "Lato", sans-serif;}
   <button class="tablinks" onmouseover="openCity(event, 'London')">Домашка_1607</button>
   <button class="tablinks" onmouseover="openCity(event, 'Paris')">Домашка_1807</button>
   <button class="tablinks" onmouseover="openCity(event, 'Tokyo')">Домашка_2607</button>
+  <button class="tablinks" onmouseover="openCity(event, 'Moscow')">Домашка_0508</button>
 </div>
 
 <div id="London" class="tabcontent">
@@ -82,7 +83,21 @@ body {font-family: "Lato", sans-serif;}
     <p><a href="img/JOIN.png">3.2 Объединения результатов запросов (UNION) и объединение таблиц <b>(JOIN)</b></a></p>
     <p><a href="img/SELECT_SELECT_HAVING.png">4. Любой подзапрос (SELECT ... (SELECT...))</a></p>
 </div>
+  
+<div id="Moscow" class="tabcontent">
+    <h2 style="opacity: 0.3">Домашка_0508</h2>
 
+    <p>Создайте <a href="code/hw_0508.py">приложение «Социальная сеть»</a>.</p> 
+    <p>Приложение должно хранить информацию о пользователе, его друзьях,</p>
+    <p>постах пользователя. Возможности приложения:</p>
+    <p>■ ■ Добавление пользователя;</p>
+    <p>■ ■ Удаление пользователя;</p>
+    <p>■ ■ Редактирование информации о пользователе;</p>
+    <p>■ ■ Поиск пользователя по ФИО;</p>
+    <p>■ ■ Просмотр информации о пользователе;</p>
+    <p>■ ■ Просмотр всех друзей пользователя;</p>
+    <p>■ ■ Просмотр всех постов пользователя.</p>
+</div>  
 <div id="Tokyo" class="tabcontent">
     <h2 style="opacity: 0.3">Домашка_2607</h2>
     <p>По sql файлу из Teams запустить у себя все 4 скрипта
