--- a/hw_all_sql.html
+++ b/hw_all_sql.html
@@ -65,6 +65,7 @@ body {font-family: "Lato", sans-serif;}
   <button class="tablinks" onmouseover="openCity(event, 'Paris')">Домашка_1807</button>
   <button class="tablinks" onmouseover="openCity(event, 'Tokyo')">Домашка_2607</button>
   <button class="tablinks" onmouseover="openCity(event, 'Moscow')">Домашка_0508</button>
+  <button class="tablinks" onmouseover="openCity(event, 'Minsk')">Домашка_1208</button>
 </div>
 
 <div id="London" class="tabcontent">
@@ -97,7 +98,23 @@ body {font-family: "Lato", sans-serif;}
     <p>■ ■ Просмотр информации о пользователе;</p>
     <p>■ ■ Просмотр всех друзей пользователя;</p>
     <p>■ ■ Просмотр всех постов пользователя.</p>
+</div>
+<div id="Minsk" class="tabcontent">
+    <h2 style="opacity: 0.3">Домашка_0508</h2>
+    <p>Реализуйте приложение <a href="code/hw_0708.py">«Корзина»</a> для веб-магазина.</p>
+    <p>Оно должно предоставлять функциональность для работы</p>
+    <p>с корзиной. Возможности приложения:</p>
+    <p>■ ■ Добавление товара в корзину;</p>
+    <p>■ ■ Удаление товара из корзины;</p>
+    <p>■ ■ Изменение товара в корзине;</p>
+    <p>■ ■ Полная очистка корзины;</p>
+    <p>■ ■ Поиск данных в корзине;</p>
+    <p>■ ■ Просмотр содержимого корзины.</p>
+    <p>Данные необходимо хранить в NoSQL базе данных.</p>
+    <p>В качестве платформы можно использовать Redis.</p>
 </div>  
+  
+  
 <div id="Tokyo" class="tabcontent">
     <h2 style="opacity: 0.3">Домашка_2607</h2>
     <p>По sql файлу из Teams запустить у себя все 4 скрипта
