--- a/hw_all_sql.html
+++ b/hw_all_sql.html
@@ -66,6 +66,7 @@ body {font-family: "Lato", sans-serif;}
   <button class="tablinks" onmouseover="openCity(event, 'Tokyo')">Домашка_2607</button>
   <button class="tablinks" onmouseover="openCity(event, 'Moscow')">Домашка_0508</button>
   <button class="tablinks" onmouseover="openCity(event, 'Minsk')">Домашка_1208</button>
+  <button class="tablinks" onmouseover="openCity(event, 'Riaa')">Домашка_1308</button>
 </div>
 
 <div id="London" class="tabcontent">
