--- a/hw_all_sql.html
+++ b/hw_all_sql.html
@@ -113,8 +113,17 @@ body {font-family: "Lato", sans-serif;}
     <p>■ ■ Просмотр содержимого корзины.</p>
     <p>Данные необходимо хранить в NoSQL базе данных.</p>
     <p>В качестве платформы можно использовать Redis.</p>
-</div>  
+</div> 
   
+<div id="Riaa" class="tabcontent">
+  <h2 style="opacity: 0.3">Домашка_1308</h2>
+  <p>https://surik00.gitbooks.io/aiogram-lessons/content/</p>
+  <p>Выполнить по ссылке первые два урока со <a href="code/Tele_bot">своим наполнением</a> (свои сообщения, свои медиафайлы)</p>
+  <p><a href="img/1308_bot.png"></a></p>
+  <p><a href="https://t.me/misha_botobot"></a></p>
+  
+  
+</div>      
   
 <div id="Tokyo" class="tabcontent">
     <h2 style="opacity: 0.3">Домашка_2607</h2>
