--- a/hw_all_sql.html
+++ b/hw_all_sql.html
@@ -118,8 +118,9 @@ body {font-family: "Lato", sans-serif;}
   <h2 style="opacity: 0.3">Домашка_1308</h2>
   <p>https://surik00.gitbooks.io/aiogram-lessons/content/</p>
   <p>Выполнить по ссылке первые два урока со <a href="code/Tele_bot">своим наполнением</a> (свои сообщения, свои медиафайлы)</p>
-  <p><a href="img/1308_bot.png">Скрин</a></p>
-  <p><a href="https://t.me/misha_botobot">Бот</a></p>  
+  <p>№1<a href="img/1308_bot.png">Скрин</a></p>
+  <p>№2<a href="https://t.me/misha_botobot">Бот</a></p> 
+  
 </div>      
   
 <div id="Tokyo" class="tabcontent">
